Undo JavaFX setup